Update build.gradle.kts to refine Java compile and test configuration
This commit modifies the build.gradle.kts to change how "--enable-preview" flag is added to JavaCompile tasks and simplifies jvmArgs for the test task. Furthermore, the "--enable-preview" flag is now also applied to tasks of type JavaExec.